--- a/hjemmesidehtml/index.html
+++ b/hjemmesidehtml/index.html
@@ -64,7 +64,8 @@
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
-                <div class="u-menu-close"></div>
+                <div class="u-menu-close">
+		      </div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 14px 50px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About-us.html" style="padding: 14px 50px;">About us</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Products.html" style="padding: 14px 50px;">Products</a>
@@ -72,7 +73,7 @@
 </li></ul>
               </div>
             </div>
-            <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+            <div class="u-black u-menu-overlay u-opacity u-opacity-100"></div>
           </div>
         </nav>
         <div class="u-border-1 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-line-1"></div>
